# python-template

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: example_uv_script.py
src/python_template/: __init__.py  app.py  main.py  settings.py
src/python_template/api/: router.py
src/python_template/api/routes/: health.py
tests/: conftest.py  test_app.py  test_settings.py
