[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chi", email = "cheez2012@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[project.scripts]
python-template = "python_template.main:main"

# --------------------------------------------------------------------------- #
#  Ruff — linting & formatting
# --------------------------------------------------------------------------- #

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "F",      # Pyflakes — undefined names, unused imports, etc.
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort — import sorting
    "UP",     # pyupgrade — modernise syntax for target Python version
    "B",      # flake8-bugbear — common bugs & design problems
    "SIM",    # flake8-simplify — simplifiable constructs
    "C4",     # flake8-comprehensions — unnecessary list/dict/set wrappers
    "FA",     # flake8-future-annotations — enforce `from __future__ import annotations`
    "ISC",    # flake8-implicit-str-concat — accidental string concatenation
    "ICN",    # flake8-import-conventions — standard import aliases
    "RET",    # flake8-return — clean return patterns
    "TID",    # flake8-tidy-imports — absolute imports, banned imports
    "TC",     # flake8-type-checking — move type-only imports into TYPE_CHECKING
    "PTH",    # flake8-use-pathlib — prefer pathlib over os.path
    "S",      # flake8-bandit — security checks
    "A",      # flake8-builtins — don't shadow builtins
    "N",      # pep8-naming — naming conventions
    "T20",    # flake8-print — no print() in production code
    "PT",     # flake8-pytest-style — pytest conventions
    "ARG",    # flake8-unused-arguments — unused function args
    "PERF",   # perflint — performance anti-patterns
    "RUF",    # ruff-specific rules
    "FURB",   # refurb — pythonic improvements
    "PL",     # pylint subset
    "ERA",    # eradicate — commented-out code
    "FLY",    # flynt — f-string modernisation
    "PIE",    # flake8-pie — misc improvements
    "RSE",    # flake8-raise — clean raise patterns
    "SLF",    # flake8-self — no private member access
    "SLOT",   # flake8-slots — __slots__ enforcement
    "TD",     # flake8-todos — TODO comment discipline
    "LOG",    # flake8-logging — logging best practices
    "G",      # flake8-logging-format — logging format strings
    "FBT",    # flake8-boolean-trap — boolean positional args
    "EM",     # flake8-errmsg — exception message formatting
    "TRY",    # tryceratops — exception handling patterns
    "BLE",    # flake8-blind-except — no bare except
    "DTZ",    # flake8-datetimez — timezone-aware datetime
    "NPY",    # numpy-specific (harmless if unused)
]
ignore = [
    "ISC001", # conflicts with ruff formatter
    "S101",   # assert used — we want asserts in production code
    "TRY003", # long exception messages — overly strict
    "EM101",  # string literal in exception — overly strict
    "EM102",  # f-string in exception — overly strict
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert is fine in tests
    "ARG",    # unused args (fixtures)
    "FBT",    # booleans in tests are fine
    "PLR2004", # magic values in tests are fine
    "SLF001", # private access in tests is fine
    "T20",    # print in tests is fine
    "TC",     # type-checking imports — pytest is runtime in tests
]

[tool.ruff.lint.isort]
known-first-party = ["python_template"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# --------------------------------------------------------------------------- #
#  ty — type checking (strict)
# --------------------------------------------------------------------------- #

[tool.ty]

[tool.ty.rules]
# Promote all warnings to errors for strict checking
possibly-unresolved-reference = "error"
deprecated = "error"
ambiguous-protocol-member = "error"
ineffective-final = "error"
invalid-ignore-comment = "error"
ignore-comment-unknown-rule = "error"
invalid-legacy-positional-parameter = "error"
# Enable the one rule that's off by default
division-by-zero = "warn"

[tool.ty.environment]
python-version = "3.13"

# --------------------------------------------------------------------------- #
#  pytest
# --------------------------------------------------------------------------- #

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=python_template",
    "--cov-report=term-missing",
]
filterwarnings = ["error"]

# --------------------------------------------------------------------------- #
#  coverage
# --------------------------------------------------------------------------- #

[tool.coverage.run]
source = ["python_template"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
